--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Arabic Script Emoticons</title>
+  <link rel="stylesheet" href="dist/styles.css">
 </head>
 <body>
+  <h1>Hello there</h1>
   <script src="src/scripts.js"></script>
 </body>
 </html>
