--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Hello there</h1>
+  <div class="js-collection"></div>
   <script src="src/scripts.js"></script>
 </body>
 </html>
