--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
 </head>
 <body>
   <h1>Hello there</h1>
-  <div class="js-collection"></div>
+  <ul>
+    <li class="emoticon">
+      <h2>Cool</h2>
+      <span>Something</span>
+    </li>
+    <li class="emoticon">
+      <h2>Cool</h2>
+      <span>Something</span>
+    </li>
+    <li class="emoticon">
+      <h2>Cool</h2>
+      <span>Something</span>
+    </li>
+    <li class="emoticon">
+      <h2>Cool</h2>
+      <span>Something</span>
+    </li>
+    <li class="emoticon">
+      <h2>Cool</h2>
+      <span>Something</span>
+    </li>
+  </ul>
 </body>
 </html>
