add basic markup and stylung

--- a/index.html
+++ b/index.html
@@ -4,30 +4,39 @@
   <meta charset="UTF-8">
   <title>Arabic Script Emoticons</title>
   <link rel="stylesheet" href="dist/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Lateef" rel="stylesheet">
 </head>
 <body>
-  <h1>Hello there</h1>
-  <ul>
-    <li class="emoticon">
-      <h2>Cool</h2>
-      <span>Something</span>
-    </li>
-    <li class="emoticon">
-      <h2>Cool</h2>
-      <span>Something</span>
-    </li>
-    <li class="emoticon">
-      <h2>Cool</h2>
-      <span>Something</span>
-    </li>
-    <li class="emoticon">
-      <h2>Cool</h2>
-      <span>Something</span>
-    </li>
-    <li class="emoticon">
-      <h2>Cool</h2>
-      <span>Something</span>
-    </li>
-  </ul>
+  <header>
+    <h1>Hello there*</h1>
+    <p>Some lead text</p>
+  </header>
+  <main>
+    <ul>
+      <li>
+        <h2>ت</h2>
+        <span>Something</span>
+      </li>
+      <li>
+        <h2>ت</h2>
+        <span>Something</span>
+      </li>
+      <li>
+        <h2>ت</h2>
+        <span>Something</span>
+      </li>
+      <li>
+        <h2>ت</h2>
+        <span>Something</span>
+      </li>
+      <li>
+        <h2>ت</h2>
+        <span>Something</span>
+      </li>
+    </ul>
+  </main>
+  <footer>
+    *Sup
+  </footer>
 </body>
 </html>
